--- a/pr_file.html
+++ b/pr_file.html
@@ -6,8 +6,11 @@
     <title>PR1</title>
 </head>
 <body>
-    <div>
-        <a href="absolute_cinema.jpg"></a>
-    </div>
+  <div>
+    <img id="img" src="absolute_cinema.jpg" width="300" height="300">
+  </div>
+  <button id="change">DONT PUSH</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
